--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <p>Robocode Marketplace</p>
-        <a href="Index.html">Back</a>
+        <a href="index.html">Back</a>
     </header>
 
     <div class="profile">
